--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -31,6 +31,10 @@
     <%= form.text_field :twitter, class: "form-control", placeholder: "Twitter" %>
   </div>
 
+  <div class="field form-group">
+    <%= form.text_field :user_id, id: :friend_user_id, value: current_user.id, class: "form-control", placeholder: "User_id", type: :hidden %>
+  </div>
+
   <div class="actions">
     <%= form.submit class: "btn btn-secondary" %>
   </div>
