--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,33 +1,36 @@
-<h1>Friends List</h1>
+<% if user_signed_in? %>
+  <h1>Friends List</h1>
 
-<table class="table table-hover">
-  <thead class="thead-dark">
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Twitter</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @friends.each do |friend| %>
+  <table class="table table-hover">
+    <thead class="thead-dark">
       <tr>
-        <td><%= friend.first_name %></td>
-        <td><%= friend.last_name %></td>
-        <td><%= friend.email %></td>
-        <td><%= friend.phone %></td>
-        <td><%= friend.twitter %></td>
-        <td><%= link_to 'Show', friend %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-        <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Twitter</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @friends.each do |friend| %>
+        <% if friend.user == current_user %>
+          <tr>
+            <td><%= link_to friend.first_name + ' ' + friend.last_name, friend %></td>
+            <td><%= friend.email %></td>
+            <td><%= friend.phone %></td>
+            <td><%= friend.twitter %></td>
+            <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
+            <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Friend', new_friend_path, class: "btn btn-secondary" %>
+  <br>
+
+  <%= link_to 'New Friend', new_friend_path, class: "btn btn-secondary" %>
+<% else %>
+  <%= render 'home/index' %>
+<% end %>
